<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Orientacoes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar">
        </include>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_orientacoes"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/app_texto_orientacoes"
            android:padding="40dp"
            android:textSize="22dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"
            android:padding="10dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:id="@+id/btOrientacoesVoltar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:height="70dp"
            android:backgroundTint="@color/red"
            android:text="Voltar"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>